# filteranagrams

./: CMakeLists.txt  main.c  main.h  readme
